// アカウント取得レスポンス
syntax = "proto3";

package api.game;

import "account/userAccount/user_account.proto";

message AccountGetResponse {
  optional UserAccount user_account = 1;
}
